# gdMetriX

./: .gitignore  CONTRIBUTING.md  KNOWN_ISSUES_SWEEP_LINE.md  README.md  build.bat  build_doc.bat  edge_directions.html  index.html  modules.html  publish.bat  py-modindex.html  pyproject.toml  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  tests.yml
_sources/: crossings.rst.txt  edge_directions.rst.txt  symmetry.rst.txt
_sources/notebooks/: cased_drawings.ipynb.txt
analysis/: _metric_worker.py  compare_symmetry.py  crossing_correctness.py  crossing_runtime.py  generateData.py  generateGraphs.py  generatePlots.py  generateTimeData.py  presentationPlots.py
doc/: additional_features.rst  common.rst  conf.py  distribution.rst  features.rst  index.rst  metrics.rst  references.bib  symmetry_overview.rst  tutorial_overview.rst
doc/_build/html/: common.html  crossings.html  datasets.html  genindex.html  objects.inv
doc/_templates/: copyright.html
docs/: .buildinfo  .buildinfo.bak  additional_features.html  boundary.html  common.html  crossings.html  datasets.html  distribution.html  edge_directions.html  features.html  genindex.html  index.html  metrics.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  symmetry.html  symmetry_overview.html  tutorial_overview.html
docs/_sources/: datasets.rst.txt  features.rst.txt  index.rst.txt  symmetry_overview.rst.txt
docs/_sources/notebooks/: tutorial.ipynb.txt
docs/notebooks/: cased_drawings.html  tutorial.html  tutorial.ipynb
html/: metrics.html  search.html  symmetry.html
html/_sources/: datasets.rst.txt  modules.rst.txt
notebooks/: cased_drawings.ipynb  tutorial.ipynb
poster/: poster.rst  poster.yaml
src/gdMetriX/: __init__.py  boundary.py  common.py  crossingDataTypes.py  crossing_data_types.py  crossings.py  datasets.py  distribution.py  edge_directions.py  generateRuntimeData.py  symmetry.py
src/gdMetriX/utils/: avl_tree.py  crossing_data_types.py  numeric.py  (+3 more)
tests/: conftest.py  test_boundary.py  test_common.py  test_datasets.py  test_distribution.py  test_edge_directions.py  test_embeddings.py
tests/crossings/: crossing_test_helper.py  test_crossing_angles.py  test_crossing_metric.py  test_crossings.py  test_crossings_quadratic.py  test_event_queue.py  test_planarization.py  test_sweep_line_status.py
tests/data/: symmetry-test-10.graphml  symmetry-test-12.graphml  symmetry-test-13.graphml  symmetry-test-15.graphml  symmetry-test-18.graphml  symmetry-test-19.graphml  symmetry-test-2.graphml  symmetry-test-20.graphml  symmetry-test-21.graphml  symmetry-test-22.graphml  symmetry-test-25.graphml  symmetry-test-33.graphml  symmetry-test-35.graphml  symmetry-test-4.graphml  symmetry-test-44.graphml  symmetry-test-45.graphml  symmetry-test-47.graphml  symmetry-test-48.graphml  symmetry-test-49.graphml  symmetry-test-51.graphml  symmetry-test-52.graphml  symmetry-test-53.graphml  symmetry-test-54.graphml  symmetry-test-6.graphml  symmetry-test-62.graphml  symmetry-test-63.graphml  symmetry-test-64.graphml  symmetry-test-8.graphml
tests/integration/: test_crossings.py  test_crossings_integration.py  test_metrics_on_dataset.py
tests/symmetry/: test_KMP_symmetry.py  test_Purchase_symmetry.py  test_even_neighborhood_distribution.py  test_stress_symmetry.py  test_visual_symmetry.py
tests/unit/: test_datasets.py  test_edge_directions.py  test_embeddings.py
(+64 files in other folders)
