[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/gdMetriX",  # Include only the package
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gdMetriX"]

[project]
name = "gdMetriX"
version = "0.0.4"
license = { file = "LICENSE" }
keywords = ["graph drawing", "networks", "metrics"]
authors = [
    { name = "Martin Nöllenburg" },
    { name = "Sebastian Röder" },
    { name = "Markus Wallinger" }
]
description = "A small extension to networkX providing common metrics for graph drawing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx>=3.2",
    "scipy>=1.10",
    "shapely>=2.0.3",
    "osfclient>=0.0.5",
    "numpy>=1.24.4",
    "scikit-image>=0.21.0",
    "matplotlib>=3.10"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-n auto"
testpaths = [
    "tests",
]